<resources>
    <string name="app_name">Dicoding Event</string>
    <string name="dicoding_logo">Dicoding Logo</string>
    <string name="brand_text">mobile</string>
    <string name="login">Login</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="hamburger_button">Hamburger Button</string>
    <string name="event">event</string>
    <string name="menu_upcoming_event">Upcoming Event</string>
    <string name="menu_last_event">Last Event</string>
    <string name="menu_your_event">Your Event</string>
    <string name="menu_your_bookmark">Your Bookmark</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_title_upcoming">yang akan datang</string>
    <string name="navigation_title_latest">sebelumnya</string>
    <string name="navigation_title_your_event">yang dihadiri</string>
</resources>
